--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1322.0",
     "axios": "^1.3.2",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
